[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
version = "0.1.0"
edition = "2021"


[features]
library = []


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cosmwasm-std = { version = "1", features = ["staking"] }
sylvia = "0.7"
serde = "1.0.180" # required by sylvia's macro expansions
schemars = "0.8" # required by sylvia's macro expansions
cosmwasm-schema = "1.3"
cw-storage-plus = "1.2"
