[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
version = "0.1.0"
edition = "2021"

[features]
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "2.0.2", features = ["staking"] }
sylvia = "1.0.2"
serde = "1.0.198"                                            # required by sylvia's macro expansions
schemars = "0.8"                                             # required by sylvia's macro expansions
cosmwasm-schema = "2.0.2"
cw-storage-plus = "2.0.0"

[dev-dependencies]
sylvia = { version = "1.0.2", features = ["mt"] }
