[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
version = "0.1.0"
edition = "2021"

[features]
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sylvia = "1.2.1"
serde = "1.0.208"
schemars = "0.8.21"
cosmwasm-schema = "2.1.3"
cw-storage-plus = "2.0.0"

[dev-dependencies]
sylvia = { version = "1.2.1", features = ["mt"] }
